# vggt-3d-scene-graph

./: .gitignore  README.md  pyproject.toml  requirements-optional.txt  requirements.txt
configs/: default.yaml
docs/: annotation_review_status.md  annotation_review_worklist.md  bigger_run_plan.md  colab_run.md  cviu_cover_letter_draft.md  cviu_submission_checklist.md  dataset_protocol.md  dedup_ablation.md  expansion_plan.md  experiment_plan.md  independent_reference_expanded_worklist.md  independent_reference_worklist.md  literature_map.md  mac_feasibility.md  manuscript_starter.md  novelty_gap.md  opensun3d_submission_plan.md  owlv2_migration.md  owlv2_system_characterization.md  owlv2_workflow_plan.md  paper_outline.md  paper_ready_status.md  paper_reframe.md  phase1_results.md  phase1_results_independent.md  phase1_uncertainty_fusion_spec.md  research_proposal.md  sample_scene_status.md  venue_recommendation.md  vggt_integration.md
notebooks/: bigger_run_colab.ipynb  owlv2_expansion_colab.ipynb
paper/: README.md  competing_interests.tex  cover_letter.tex  highlights.txt  main.aux  main.bbl  main.blg  main.out  main.tex  main_eccv.tex  references.bib  supplementary.tex  title_page.tex
results/: smoke_geometry.json  smoke_scene_graph.json
scripts/: aggregate_variant_f1.py  assign_detector_labels.py  assign_open_vocab_labels.py  audit_annotation_reviews.py  build_annotations_from_review.py  build_dataset_manifest.py  build_independent_reference.py  check_environment.py  check_scene_matches.py  create_annotation_packet.py  create_paper_diagrams.py  (+34 more)
(+212 files in other folders)
