[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vggt-scene-graph"
version = "0.1.0"
description = "Sparse-view VGGT-based 3D scene graph research scaffold"
requires-python = ">=3.11"
dependencies = [
  "numpy<2",
  "scipy",
  "pandas",
  "scikit-learn",
  "networkx",
  "pydantic",
  "pillow",
  "opencv-python<4.12",
  "matplotlib",
  "tqdm",
  "torch",
  "torchvision",
  "huggingface_hub",
]

[tool.setuptools.packages.find]
where = ["src"]
